# VlessVpn-android

./: .gitignore  CLAUDE.md  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
app/: build.gradle  build.gradle.kts  proguard-rules.pro  vlessvpn.jks
app/src/androidTest/java/com/musicses/vlessvpn/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: bypass_private_ips.txt
app/src/main/java/com/musicses/vlessvpn/: LocalSocks5Server.kt  MainActivity.kt  PacketTunnel.kt  TcpProxy_STATE_FIX.patch.kt  TunHandler.kt  TunHandler_UDP_FIX.patch.kt  VlessConfig.kt  VlessDiagnostic.kt  VlessProtocol.kt  VlessTunnel.kt  VlessVpnService.kt
app/src/main/java/com/vlessvpn/: VlessVpnApp.kt
app/src/main/java/com/vlessvpn/model/: VlessConfig.kt
app/src/main/java/com/vlessvpn/service/: LocalProxyServer.kt  VlessVpnService.kt
app/src/main/java/com/vlessvpn/ui/: AddConfigActivity.kt  ConfigListActivity.kt  MainActivity.kt
app/src/main/res/drawable/: ic_vpn.xml  ic_vpn_on.xml  ripple_animation.xml
app/src/main/res/layout/: activity_add_config.xml  activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml
gradle/: libs.versions.toml
gradle/wrapper/: GRADLE_WRAPPER_NOTE.txt  gradle-wrapper.properties
tun2socks/: build.gradle  consumer-rules.pro  proguard-rules.pro
tun2socks/src/main/cpp/: CMakeLists.txt  tun2socks.cpp  tun2socks.cpp''
tun2socks/src/main/cpp/prebuilt/include/tun2socks/: tun2socks.h
(+8 files in other folders)
